--- a/index.html
+++ b/index.html
@@ -14,8 +14,6 @@
     
     <!-- Font Awesome CDN -->
     <script src="https://kit.fontawesome.com/ffa5e5607e.js" crossorigin="anonymous"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
     
     <!-- Meta tag to refresh the page every 300 seconds -->
     <meta http-equiv="refresh" content="300">
@@ -103,7 +101,7 @@ s0.parentNode.insertBefore(s1,s0);
     <button class="settings-button" aria-label="Settings" onclick="window.location.href='settings.html'"></button>
 
     <div class="profile-pic-wrapper">
-        <img src="profile.jpg" alt="Profile Picture" class="profile-pic" id="indexProfilePic">
+        <img src="profile.jpg" alt="Profile Picture" class="profile-pic">
 
         <div class="profile-status-container">
             <span class="profile-status">🟢</span>
@@ -111,11 +109,11 @@ s0.parentNode.insertBefore(s1,s0);
     </div>
 
     <div class="username-checkmark">
-        <h1 id="indexUsername">Bus Army Dude</h1>
+        <h1>Bus Army Dude</h1>
         <img src="check.png" alt="Verified" class="verified">
     </div>
-    <p id="indexBioLine1">CURRENT PRESIDENT: Trump (2025-2029)</p>
-    <p id="indexBioLine2">POLITICAL PARTY: Republican</p>
+    <p>CURRENT PRESIDENT: Trump (2025-2029)</p>
+    <p>POLITICAL PARTY: Republican</p>
 
     <button class="weather-button" aria-label="Weather" onclick="window.location.href='weather.html'"></button>
 </div>
@@ -740,6 +738,5 @@ s0.parentNode.insertBefore(s1,s0);
     <script src="device.js"></script>
     <script src="creatorshoutouts.js"></script>
     <script src="business-hours.js"></script>
-    <script src="admin-portal.js"></script>
 </body>
 </html>                
