--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@ s0.parentNode.insertBefore(s1,s0);
 
         <!-- Countdown Section -->
         <div class="countdown-section">
-            <h2>Countdown to Summer 2025!</h2>
+            <h2>Countdown to Earth Day 2025!</h2>
             <div class="countdown-container">
                 <div class="countdown-block">
                     <div id="countdown-years" class="flip-clock">
