--- a/index.html
+++ b/index.html
@@ -230,53 +230,65 @@ s0.parentNode.insertBefore(s1,s0);
 
         <!-- Countdown Section -->
         <div class="countdown-section">
-        <h2>Countdown to Earth Day 2025!</h2>
-        <div class="countdown-container">
-            <div class="countdown-block">
-                <div id="countdown-years" class="flip-clock" data-value="00">
-                    <div class="top-half">00</div>
-                    <div class="bottom-half">00</div>
+            <h2>Countdown to Summer 2025!</h2>
+            <div class="countdown-container">
+                <div class="countdown-block">
+                    <div id="countdown-years" class="flip-clock">
+                        <div class="flip-clock-inner">
+                            <div class="flip-clock-front">00</div>
+                            <div class="flip-clock-back">00</div>
+                        </div>
+                    </div>
+                    <div class="countdown-label">Years</div>
                 </div>
-                <div class="countdown-label">Years</div>
-            </div>
-            <div class="countdown-block">
-                <div id="countdown-months" class="flip-clock" data-value="00">
-                    <div class="top-half">00</div>
-                    <div class="bottom-half">00</div>
+                <div class="countdown-block">
+                    <div id="countdown-months" class="flip-clock">
+                        <div class="flip-clock-inner">
+                            <div class="flip-clock-front">00</div>
+                            <div class="flip-clock-back">00</div>
+                        </div>
+                    </div>
+                    <div class="countdown-label">Months</div>
                 </div>
-                <div class="countdown-label">Months</div>
-            </div>
-            <div class="countdown-block">
-                <div id="countdown-days" class="flip-clock" data-value="00">
-                    <div class="top-half">00</div>
-                    <div class="bottom-half">00</div>
+                <div class="countdown-block">
+                    <div id="countdown-days" class="flip-clock">
+                        <div class="flip-clock-inner">
+                            <div class="flip-clock-front">00</div>
+                            <div class="flip-clock-back">00</div>
+                        </div>
+                    </div>
+                    <div class="countdown-label">Days</div>
                 </div>
-                <div class="countdown-label">Days</div>
-            </div>
-            <div class="countdown-block">
-                <div id="countdown-hours" class="flip-clock" data-value="00">
-                    <div class="top-half">00</div>
-                    <div class="bottom-half">00</div>
+                <div class="countdown-block">
+                    <div id="countdown-hours" class="flip-clock">
+                        <div class="flip-clock-inner">
+                            <div class="flip-clock-front">00</div>
+                            <div class="flip-clock-back">00</div>
+                        </div>
+                    </div>
+                    <div class="countdown-label">Hours</div>
                 </div>
-                <div class="countdown-label">Hours</div>
-            </div>
-            <div class="countdown-block">
-                <div id="countdown-minutes" class="flip-clock" data-value="00">
-                    <div class="top-half">00</div>
-                    <div class="bottom-half">00</div>
+                <div class="countdown-block">
+                    <div id="countdown-minutes" class="flip-clock">
+                        <div class="flip-clock-inner">
+                            <div class="flip-clock-front">00</div>
+                            <div class="flip-clock-back">00</div>
+                        </div>
+                    </div>
+                    <div class="countdown-label">Minutes</div>
                 </div>
-                <div class="countdown-label">Minutes</div>
-            </div>
-            <div class="countdown-block">
-                <div id="countdown-seconds" class="flip-clock" data-value="00">
-                    <div class="top-half">00</div>
-                    <div class="bottom-half">00</div>
+                <div class="countdown-block">
+                    <div id="countdown-seconds" class="flip-clock">
+                        <div class="flip-clock-inner">
+                            <div class="flip-clock-front">00</div>
+                            <div class="flip-clock-back">00</div>
+                        </div>
+                    </div>
+                    <div class="countdown-label">Seconds</div>
                 </div>
-                <div class="countdown-label">Seconds</div>
             </div>
         </div>
-    </div>
-        
+
 <!-- Calendar Section -->
 <section class="section" data-section-id="events">
     <div class="section-content">
