--- a/weather.html
+++ b/weather.html
@@ -37,20 +37,16 @@
                 <img src="assest/images/logo.png" alt="logo">
             </a>
             <div class="search-view" data-search-view>
-                <div class="search-wrapper">
-                    <input type="search"
-                               name="search"
-                               class="search-field"
-                               placeholder="Search city..."
-                               autocomplete="off"
-                               data-search-field>
-                    <span class="m-icon">search</span>
-                    <button class="icon-btn leading-icon has-state" aria-label="close search" data-search-toggler>
-                        <span class="m-icon">arrow_back</span>
-                    </button>
-                </div>
-                <div class="search-result" data-search-result></div>
+              <div class="search-wrapper">
+                <input type="search" name="search" class="search-field" placeholder="Search city..." autocomplete="off" data-search-field>
+                <span class="m-icon">search</span>
+                <button class="icon-btn leading-icon has-state" aria-label="close search" data-search-toggler>
+                  <span class="m-icon">arrow_back</span>
+                </button>
+              </div>
+              <div class="search-result" data-search-result></div>
             </div>
+
             <div class="header-actions">
                 <a href="#/current-location" class="btn-primary has-state" data-current-location-btn>
                     <span class="m-icon">my_location</span>
