--- a/settings.html
+++ b/settings.html
@@ -112,7 +112,7 @@
                         <h3 class="setting-title">Profile Status</h3>
                         <p class="setting-description">Set profile status (Online, Idle, Offline)</p>
                     </div>
-                    <select id="profileStatusSelect" class="select-input" disabled aria-label="Select profile status">
+                    <select id="profileStatusSelect" class="select-input" enabled aria-label="Select profile status">
                         <option value="online">🟢 Online</option>
                         <option value="idle">🟡 Idle</option>
                         <option value="offline">🔘 Offline</option>
