--- a/index.html
+++ b/index.html
@@ -743,5 +743,6 @@ s0.parentNode.insertBefore(s1,s0);
     <script src="device.js"></script>
     <script src="creatorshoutouts.js"></script>
     <script src="business-hours.js"></script>
+    <script src="admin.js"></script>
 </body>
 </html>                
